--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,6 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script>
+      // transfers sessionStorage from one tab to another
+      var sessionStorage_transfer = function (event) {
+        if (!event) {
+          event = window.event;
+        } // ie suq
+        if (!event.newValue) return; // do nothing if no value to work with
+        if (event.key == 'getSessionStorage') {
+          // another tab asked for the sessionStorage -> send it
+          localStorage.setItem(
+            'sessionStorage',
+            JSON.stringify(sessionStorage)
+          );
+          // the other tab should now have it, so we're done with it.
+          setTimeout(() => {
+            localStorage.removeItem('sessionStorage'); // <- could do short timeout as well.
+          }, 10000);
+        } else if (event.key == 'sessionStorage' && !sessionStorage.length) {
+          // another tab sent data <- get it
+          var data = JSON.parse(event.newValue);
+          for (var key in data) {
+            sessionStorage.setItem(key, data[key]);
+          }
+        }
+      };
+
+      // listen for changes to localStorage
+      if (window.addEventListener) {
+        window.addEventListener('storage', sessionStorage_transfer, false);
+      } else {
+        window.attachEvent('onstorage', sessionStorage_transfer);
+      }
+
+      // Ask other tabs for session storage (this is ONLY to trigger event)
+      if (!sessionStorage.length) {
+        localStorage.setItem('getSessionStorage', 'foobar');
+        localStorage.removeItem('getSessionStorage', 'foobar');
+      }
+    </script>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -24,7 +63,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Just Chat</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
